--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "SchmidtMilena\\DbLogger\\Tests\\": "tests"
+            "SchmidtMilena\\DbLogger\\Tests\\": "tests",
+            "SchmidtMilena\\DbLogger\\Database\\Factories\\": "database/factories"
         }
     },
     "scripts": {
