--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "role": "Developer"
     }],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "illuminate/contracts": "^8.0"
     },
     "require-dev": {
